                                                         -*- coding: utf-8 -*-
Changes with Apache Traffic Server 3.1.4
  *) [TS-1279] Fix build system for gcc < 4.3.

  *) [TS-1277] Fixed issue with IPv6 URLs and remap configuration.

  *) [TS-1195] Support the use of raw IPv6 address in URLs and Host fields.

  *) [TS-1275] Fix startup problem where /var is on a volatile disk.
   Author: Eric Connell.

  *) [TS-1274] Transformation plugins can send content-length with 
   non-identity transfer encoding. Author: Otto van der Schaff.

  *) [TS-1272] workaround for - FATAL: HttpSM.cc:890: failed assert `0`

  *) [TS-1240] Fix race in log buffer queuing code.

  *) [TS-1271] deprecate INKStats API

  *) [TS-1250] Cache inspector does not seem to work properly

  *) [TS-1269] Building outside source tree fails on plugins.

  *) [TS-1222] single tcp connection will limit the cluster throughput.

  *) [TS-475] Accelerated single range requests.
     Based on initial work by ericb, with help from bwyatt.

  *) [TS-1236] HTTP Accept filters do not work on Illumos.

  *) [TS-1075] Workarounds for linux auto-port issues in transparent
   deployments.

  *) [TS-672] cleanup Win32 references.

  *) [TS-1181] Make the overridable configs work with "byte" configs.

  *) [TS-1252] Fixed include issues when using mgmtapi.h.

  *) [TS-1248] update HTTP status codes and strings.

  *) [TS-1245] proxy.config.http.connect_ports may be '*'.

  *) [TS-1239] TSHttpTxnServerAddrSet implementation.

  *) [TS-1237] custom log field/filtering improvements.

  *) [TS-1090] SO_MARK and IP_TOS support for Linux.

  *) [TS-1238] RAM cache hit rate unexpectedly low with CLFUS.

  *) [TS-1242] Make it build with some more recent automake versions.

  *) [TS-1241] Memory leaks when using TSHttpSchedule().
   Author: Aidan McGurn.

  *) [TS-1163] Support for raw disks larger than 2TB on Linux.

  *) [TS-1230] added a paramter to the configure script to allow overriding