@@ -1,4 +1,8 @@
                                                          -*- coding: utf-8 -*-
+Changes with Apache Traffic Server 3.1.5 (or 3.3.0 EDIT)
+  *) [TS-1282] Verbosity settings for Via headers is broken.
+
+
 Changes with Apache Traffic Server 3.1.4
   *) [TS-1279] Fix build system for gcc < 4.3.
 
